--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "clean": "rimraf ./dist ./**/codegen",
         "clean:all": "npm run clean && rimraf ./node_modules package-lock.json",
         "codegen": "node ./dist/main/bin/index.js --target apache --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
-        "prebuild": "npm run clean && npm run lint && npm run format",
+        "prebuild": "npm run clean && npm run lint ",
         "build": "npm run build:only",
         "build:only": "tsc",
         "prebuild:test": "npm run build && npm run codegen",
